Initial commit: Fix card expiration logic and improve test coverage